<resources>
    <string name="app_name">TSL_App</string>
    <string name="version">v.1.0.3</string>
    <string name="deviceId">Device id : </string>
    <string name="graph">Graph</string>
    <string name="search_pipe">Search Pipe</string>
    <string name="search">Search</string>
    <string name="rfid">RFID</string>
    <string name="tagPipe">Tag Pipe to</string>
    <string name="signal_strength" />
    <string name="scanRfid">Scan RFID</string>
    <string name="enter_pipe_number">Enter Pipe Number</string>
    <string name="save">SAVE</string>
    <string name="login">Login</string>
    <string name="help">Call help desk to reset password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tagged_on">Tagged On</string>
    <string name="tagged_by">Tagged By</string>
    <string name="projectName">Project Name</string>
    <string name="clientName">Client Name</string>
    <string name="processSheet">Process Sheet</string>
    <string name="pipeNo">Pipe Number</string>
    <string name="pipeSize">Pipe Size</string>
    <string name="s_no">S No.</string>
    <string name="auto_complete">(Auto Complete)</string>
    <string name="put_comma_for_multiple_pipe">[ put comma(,) for multiple pipe ]</string>
    <string name="trigger">Press Trigger to Scan RFID</string>
    <string name="locator">Locator</string>
    <string name="tagNo">Tag Number :</string>
    <string name="tag">Pipe/Tag </string>
    <string name="stage1">I</string>
    <string name="stage2">T</string>
    <string name="stage3">EF</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="enter_password">Enter Password</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="connect">CONNECT</string>
    <string name="sPipeNo">Select Pipe Number/Asl number</string>
    <string name="logo"/>
    <string name="enter_power">Enter power</string>
    <string name="passed_through">Passed Through</string>
    <string name="pStation">Process / Station</string>
    <string name="dTime">Date Time</string>
    <string name="currently_at">Currently At</string>
    <string name="station">Station</string>
    <string name="remarks">Remarks</string>
    <string name="add">+ ADD</string>
    <string name="show">Show</string>
    <string name="pipe_no">Pipe No</string>
    <string name="process_sheet">Process Sheet</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="no">No.</string>
    <string name="no.">No</string>
    <string name="year">Year</string>
    <string name="process_sheet_no">Process sheet no.</string>
    <string name="internetConn">Please check your internet connection and try again.</string>
    <string name="power">Power</string>
    <string name="tallysheet_no">Tallysheet No.</string>
    <string name="no_pipe">Number of Pipes</string>
    <string name="setting">Setting</string>
    <string name="url">URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="connecting">Connecting...</string>
    <string name="mapPipe">Mapped Pipe</string>
    <string name="yes">YES</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="mapped_pipe">Mapped Pipe</string>
</resources>