<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur_white"
    tools:context=".activities.login.LoginActivity">

    <include
        android:id="@+id/lvLogo"
        layout="@layout/activity_header_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/deviceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/deviceId"
            android:textColor="@color/blueColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/deviceId"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"

            android:autofillHints="username"
            android:background="@drawable/border_radius"
            android:drawableStart="@drawable/leftdrawableuser"
            android:drawablePadding="@dimen/_9sdp"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/userName"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:autofillHints="password"
            android:drawableStart="@drawable/leftdrawablepass"
            android:background="@drawable/border_radius"
            android:drawablePadding="@dimen/_9sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="20dp"
            android:drawablePadding="9dip"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/leftdrawableicon" />


        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@id/help"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/blueColor"
            android:text="@string/login" />

    </RelativeLayout>

    <include
        android:id="@+id/versionClick"
        layout="@layout/activity_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
