<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/blueColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/backarrow"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center|start"
            android:text="@string/power"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/user_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/power"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/power"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/user_id_label"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:autofillHints="enter Power"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_power"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:id="@+id/saveButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardBackgroundColor="@color/blueColor"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp">

        <TextView
            android:id="@+id/SaveBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>
