<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".activities.searchGraph.LocatorActivity">

    <include
        android:id="@+id/lvLogo"
        layout="@layout/activity_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/backarrow" />

        <TextView
            android:id="@+id/backText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backIcon"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:text="@string/locator"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tagNo"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tagEPC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        tools:ignore="MissingClass">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signal_strength"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.example.tsl_app.utils.RangeGraph
            android:id="@+id/locationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>
</LinearLayout>